Set contact email and remove site title from footer

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Victor Gil Alejandria
 description: Senior iOS Developer | iOS Architect | Swift | High-Quality Mobile Products | Remote
+email: victor.alejandria@outlook.com
 url: "https://victorgilalejandria.github.io"
 baseurl: ""
 
